	`CygbuildCygcheckLibraryDepListFull'.
	(CygbuildCygcheckLibraryDepMain): Add error checking.
	(CygbuildCygcheckLibraryDepGrepPgkNamesMain): Add error checking.
	(CygbuildVersionInfo): Support foo1.2.3
	(CygbuildFilePackageGuessFromDirectory): Loosend version check.
	(CygbuildCmdInstallCheckPkgDocdir); Ignore certain files.
	(CygbuildHelpShort): Mention long options.

2007-12-20  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (HELP::QUICK OVERVIEW): Mention command
	`almostall'.

	* bin/cygbuild.sh (CygbuildMakefileRunInstallPythonFix):
	Check manual page location and fix it if needed.
	(CygbuildInstallPackageInfo): chnage mkdir(1) to install(1).
	(CygbuildCmdInstallCheckManualPages): Improve missing manual
	page check.
	(CygbuildMakefileRunInstall): Always run
	`CygbuildMakefilePrefixCheck'
	(CygbuildCommandMain): Use quotes.
	(CygbuildHelpLong): Call `CygbuildBootVariablesGlobalShareMain'
	and use $CYGBUILD_STATIC_PERL_MODULE
	(CygbuildCygbuildDefineGlobalSrcOrigGuess): Support *.tgz *.tbz
	(CygbuildTarOptionCompress): Support *.tbz
	(CygbuildInstallPackageDocs): Obey directory references
	like --include=contrib/* and create needed directory.
	(CygbuildCygcheckMain): Send cygcheck output forward.
	(CygbuildCmdInstallCheckPkgDocdir): Add contrib/ dir check.

2007-12-19  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallCheckDirStructure):
	Ignore /etc/X11/app-defaults
	(CygbuildCmdInstallCheckSetupHintDependExists): Restore
	for..in and remove while..do.

2007-12-18  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildCmdPkgDevelStandardDev): Remove
	process substitution.
	(CygbuildCmdInstallCheckDirEmpty): Remove process substitution.
	(CygbuildCmdInstallMain): Send path to custom install script.
	(CygbuildLibInstallEnvironment): Add quotes.
	(CygbuildDefineEnvClear): Unset INCLUDE_PATH
	(CygbuildShellEnvironenment): Remove INCLUDE_PATH
	(CygbuildCmdStripMain): Strip also *.so.
	(CygbuildObjDumpLibraryDepList): New.